[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Script_Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/player_skin.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Scene_Player_GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Scene_ChatRoom.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/list.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Script_ListMenu.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Scene_PlayerInventory.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 17.904

[sub_resource type="CircleShape2D" id=2]
radius = 27.1822

[node name="Player" type="Area2D" groups=[
"players",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.096, 299.995 )
texture = ExtResource( 2 )

[node name="GUI" parent="." instance=ExtResource( 3 )]
margin_left = 434.361
margin_top = 246.995
margin_right = 590.361
margin_bottom = 353.995

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_drag_margin = true

[node name="StatsLabel" type="Label" parent="."]
margin_left = 25.6109
margin_top = 30.4877
margin_right = 162.611
margin_bottom = 59.4877
text = "STATS"
align = 1

[node name="HealthLabel" type="Label" parent="StatsLabel"]
margin_left = -5.58673
margin_top = 20.9501
margin_right = 45.4133
margin_bottom = 50.0571
text = "Health:"

[node name="HealthCountLabel" type="Label" parent="StatsLabel"]
margin_left = 82.7944
margin_top = 21.0
margin_right = 137.794
margin_bottom = 35.0
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="WaterLabel" type="Label" parent="StatsLabel"]
margin_left = -5.58673
margin_top = 35.165
margin_right = 45.4133
margin_bottom = 50.057
text = "Water:"

[node name="WaterCountLabel" type="Label" parent="StatsLabel"]
margin_left = 83.0
margin_top = 35.0
margin_right = 138.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="FoodLabel" type="Label" parent="StatsLabel"]
margin_left = -5.72168
margin_top = 50.3
margin_right = 45.2783
margin_bottom = 64.3
text = "Food:"

[node name="FoodCountLabel" type="Label" parent="StatsLabel"]
margin_left = 82.0
margin_top = 50.0
margin_right = 138.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="AmmoLabel" type="Label" parent="StatsLabel"]
margin_left = -5.72168
margin_top = 62.847
margin_right = 45.2783
margin_bottom = 76.847
text = "Ammo:"

[node name="AmmoCountLabel" type="Label" parent="StatsLabel"]
margin_left = 84.0
margin_top = 63.0
margin_right = 138.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="SpeedLabel" type="Label" parent="StatsLabel"]
margin_left = -5.72168
margin_top = 93.6471
margin_right = 45.2783
margin_bottom = 107.647
text = "Speed:"

[node name="SpeedCountLabel" type="Label" parent="StatsLabel"]
margin_left = 80.0
margin_top = 93.0
margin_right = 138.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="FPSLabel" type="Label" parent="StatsLabel"]
margin_left = -5.72168
margin_top = 121.387
margin_right = 45.2783
margin_bottom = 135.387
text = "FPS:"

[node name="FPSCountLabel" type="Label" parent="StatsLabel"]
margin_left = 78.0
margin_top = 121.0
margin_right = 138.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="PlayersLabel" type="Label" parent="StatsLabel"]
margin_left = -5.72168
margin_top = 136.085
margin_right = 45.2783
margin_bottom = 150.085
text = "Players:"

[node name="PlayersCountLabel" type="Label" parent="StatsLabel"]
margin_left = 78.0
margin_top = 134.943
margin_right = 138.0
margin_bottom = 148.943
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="PlayerIDLabel" type="Label" parent="StatsLabel"]
margin_left = -5.72168
margin_top = 151.085
margin_right = 56.2783
margin_bottom = 165.085
text = "Player ID:"

[node name="PlayerIDCountLabel" type="Label" parent="StatsLabel"]
margin_left = 78.0
margin_top = 150.321
margin_right = 138.0
margin_bottom = 164.321
rect_pivot_offset = Vector2( 8, 20 )
text = "0"
align = 2

[node name="LoadLabel" type="Label" parent="StatsLabel"]
margin_left = -5.58673
margin_top = 180.0
margin_right = 34.4133
margin_bottom = 194.0
rect_pivot_offset = Vector2( 130, 33.7847 )
text = "Load:"

[node name="LoadCountLabel" type="Label" parent="StatsLabel"]
margin_left = 97.0909
margin_top = 180.0
margin_right = 137.091
margin_bottom = 194.0
rect_pivot_offset = Vector2( 40, 33.7847 )
text = "0/0kg"
align = 2

[node name="MoneyLabel" type="Label" parent="StatsLabel"]
margin_left = -5.72168
margin_top = 194.0
margin_right = 41.2783
margin_bottom = 208.0
rect_pivot_offset = Vector2( 130, 33.7847 )
text = "Money:"

[node name="MoneyCountLabel" type="Label" parent="StatsLabel"]
margin_left = 98.1716
margin_top = 194.0
margin_right = 138.172
margin_bottom = 208.0
rect_pivot_offset = Vector2( 40, 33.7847 )
text = "0"
align = 2

[node name="ChatRoom" parent="." groups=[
"Group_ChatRoom",
] instance=ExtResource( 4 )]
margin_left = 512.797
margin_top = 450.652
margin_right = 552.797
margin_bottom = 490.652

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 512.096, 299.995 )
shape = SubResource( 1 )

[node name="ListIcon" type="Sprite" parent="."]
position = Vector2( 1235.01, 46.7226 )
texture = ExtResource( 5 )

[node name="Area2DList" type="Area2D" parent="ListIcon"]
position = Vector2( 6.10352e-005, 0 )
script = ExtResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ListIcon/Area2DList"]
shape = SubResource( 2 )

[node name="ListMenu" type="Node2D" parent="."]
visible = false
position = Vector2( 512.638, 300.462 )

[node name="Control" parent="ListMenu" instance=ExtResource( 7 )]
margin_left = -392.638
margin_top = -240.974
margin_right = 119.362
margin_bottom = 59.0256
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="mouse_entered" from="ListIcon/Area2DList" to="ListIcon/Area2DList" method="_on_Area2DList_mouse_entered"]
[connection signal="mouse_exited" from="ListIcon/Area2DList" to="ListIcon/Area2DList" method="_on_Area2DList_mouse_exited"]
